--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   sqflite: ^2.2.0+3
   path_provider: ^2.0.11
   path: ^1.8.2
+  cloud_firestore: ^4.0.5
+  firebase_analytics: ^10.0.5
 
 dev_dependencies:
   flutter_test:
